adsap-parser.js
(parser => typeof module === "undefined" ? adsapParser = parser : module.exports = parser)((function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, location) {
    this.message  = message;
    this.expected = expected;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var parser = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { file: peg$parsefile },
        peg$startRuleFunction  = peg$parsefile,

        peg$c0 = function(props, n) {return n},
        peg$c1 = function(props, nodes) {return {nodes, props}},
        peg$c2 = function(p) {return p},
        peg$c3 = function(init) {return makeExpr("init", init)},
        peg$c4 = function(prop) {return prop},
        peg$c5 = "#",
        peg$c6 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c7 = "css",
        peg$c8 = { type: "literal", value: "css", description: "\"css\"" },
        peg$c9 = ":",
        peg$c10 = { type: "literal", value: ":", description: "\":\"" },
        peg$c11 = function(css) {return makeExpr("css", css)},
        peg$c12 = "title",
        peg$c13 = { type: "literal", value: "title", description: "\"title\"" },
        peg$c14 = "author",
        peg$c15 = { type: "literal", value: "author", description: "\"author\"" },
        peg$c16 = function(type, text) {return makeExpr(type, text)},
        peg$c17 = function(c) {return contenttext(c)},
        peg$c18 = /^[\r\n]/,
        peg$c19 = { type: "class", value: "[\\r\\n]", description: "[\\r\\n]" },
        peg$c20 = /^[#{}]/,
        peg$c21 = { type: "class", value: "[#{}]", description: "[#{}]" },
        peg$c22 = "==",
        peg$c23 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c24 = /^[^{}\\ \t\r\n]/,
        peg$c25 = { type: "class", value: "[^{}\\\\ \\t\\r\\n]", description: "[^{}\\\\ \\t\\r\\n]" },
        peg$c26 = function(h) {return h},
        peg$c27 = function(head, node) {if (head) {node.name = head.name; node.params = head.params} return node},
        peg$c28 = function(head, node) {node.name = head.name; node.params = head.params; return node},
        peg$c29 = function(n, p) {return {name: n, params: p && p[1]}},
        peg$c30 = function(startevents, text, a) {return a},
        peg$c31 = function(startevents, text, arrows, ee) {return ee},
        peg$c32 = function(startevents, text, arrows, endevents, o) {return o},
        peg$c33 = function(startevents, text, arrows, endevents, opts, p) {return p},
        peg$c34 = function(startevents, text, arrows, endevents, opts, autoprog) {return {type: "node", startEvents: startevents || [], endEvents: endevents || [], text, arrows, opts, autoprog}},
        peg$c35 = function(h, c) {return c},
        peg$c36 = function(h, t) {return [h].concat(t)},
        peg$c37 = function(i) {return i},
        peg$c38 = /^[ \t]/,
        peg$c39 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
        peg$c40 = function(c) {return makeExpr("white", c.join(""))},
        peg$c41 = "\r\n",
        peg$c42 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c43 = function(c) {return makeExpr("break", c)},
        peg$c44 = /^[*|#]/,
        peg$c45 = { type: "class", value: "[*|#]", description: "[*|#]" },
        peg$c46 = /^[[\]]/,
        peg$c47 = { type: "class", value: "[\\[\\]]", description: "[\\[\\]]" },
        peg$c48 = "=>",
        peg$c49 = { type: "literal", value: "=>", description: "\"=>\"" },
        peg$c50 = "->",
        peg$c51 = { type: "literal", value: "->", description: "\"->\"" },
        peg$c52 = "==>",
        peg$c53 = { type: "literal", value: "==>", description: "\"==>\"" },
        peg$c54 = "=!>",
        peg$c55 = { type: "literal", value: "=!>", description: "\"=!>\"" },
        peg$c56 = /^[$@]/,
        peg$c57 = { type: "class", value: "[$@]", description: "[$@]" },
        peg$c58 = "{",
        peg$c59 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c60 = function(a) {return arrows(a)},
        peg$c61 = function(p, a) {return a},
        peg$c62 = function(p, e) {return arrows(e, p)},
        peg$c63 = function() {return "continue"},
        peg$c64 = function() {return makeExpr("stop")},
        peg$c65 = { type: "any", description: "any character" },
        peg$c66 = function(a) {return a},
        peg$c67 = /^[\r\n[\]]/,
        peg$c68 = { type: "class", value: "[\\r\\n\\[\\]]", description: "[\\r\\n\\[\\]]" },
        peg$c69 = function(h, t) {return progressors([h].concat(t))},
        peg$c70 = function() {return "break"},
        peg$c71 = function() {return null},
        peg$c72 = function(h, o) {return o},
        peg$c73 = "*",
        peg$c74 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c75 = function(r) {return r},
        peg$c76 = function(pre, text, a) {return a},
        peg$c77 = function(pre, text, arrows, o) {return o},
        peg$c78 = function(pre, text, arrows, post) {return {text, arrows, startEvents: pre, endEvents: post}},
        peg$c79 = "|",
        peg$c80 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c81 = "[",
        peg$c82 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c83 = "]",
        peg$c84 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c85 = function(n) {return n},
        peg$c86 = /^[0-9a-zA-Z_]/,
        peg$c87 = { type: "class", value: "[0-9a-zA-Z_]", description: "[0-9a-zA-Z_]" },
        peg$c88 = function(c) {return c.join("")},
        peg$c89 = "\\",
        peg$c90 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c91 = /^[^ux]/,
        peg$c92 = { type: "class", value: "[^ux]", description: "[^ux]" },
        peg$c93 = "x",
        peg$c94 = { type: "literal", value: "x", description: "\"x\"" },
        peg$c95 = "u",
        peg$c96 = { type: "literal", value: "u", description: "\"u\"" },
        peg$c97 = "}",
        peg$c98 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c99 = function(d) {return esc(d)},
        peg$c100 = /^[0-9a-z]/i,
        peg$c101 = { type: "class", value: "[0-9a-z]i", description: "[0-9a-z]i" },
        peg$c102 = function(c) {return c},
        peg$c103 = /^[^{}]/,
        peg$c104 = { type: "class", value: "[^{}]", description: "[^{}]" },
        peg$c105 = /^[{}]/,
        peg$c106 = { type: "class", value: "[{}]", description: "[{}]" },
        peg$c107 = function(c) {return makeExpr("js", c)},
        peg$c108 = "$",
        peg$c109 = { type: "literal", value: "$", description: "\"$\"" },
        peg$c110 = "@",
        peg$c111 = { type: "literal", value: "@", description: "\"@\"" },
        peg$c112 = "(",
        peg$c113 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c114 = ")",
        peg$c115 = { type: "literal", value: ")", description: "\")\"" },
        peg$c116 = function(c) {return concatItems(c)},
        peg$c117 = /^[^()]/,
        peg$c118 = { type: "class", value: "[^()]", description: "[^()]" },
        peg$c119 = "%%",
        peg$c120 = { type: "literal", value: "%%", description: "\"%%\"" },
        peg$c121 = function(expr) {return expr},
        peg$c122 = /^[{}()%]/,
        peg$c123 = { type: "class", value: "[{}()%]", description: "[{}()%]" },
        peg$c124 = /^[ \t\uFEFF]/,
        peg$c125 = { type: "class", value: "[ \\t\\ufeff]", description: "[ \\t\\ufeff]" },
        peg$c126 = /^[ \t\r\n\uFEFF]/,
        peg$c127 = { type: "class", value: "[ \\t\\r\\n\\ufeff]", description: "[ \\t\\r\\n\\ufeff]" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildException(message, null, location);
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, location) {
      function cleanupExpected(expected) {
        var i, j;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        if (expected.length > 0) {
          for (i = 1, j = 1; i < expected.length; i++) {
            if (expected[i - 1] !== expected[i]) {
              expected[j] = expected[i];
              j++;
            }
          }
          expected.length = j;
        }
      }

      function buildMessage(expected) {
        var expectedDescs = new Array(expected.length),
            expectedDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        return "Expected " + expectedDesc + ".";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected),
        expected,
        location
      );
    }

    function peg$parsefile() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parsefileprops();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          s5 = peg$parsenodedeclaration();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c0(s1, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsenodedeclaration();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s3;
              s4 = peg$c0(s1, s5);
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c1(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsefileprops() {
      var s0, s1, s2, s3;

      s0 = [];
      s1 = peg$currPos;
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsefileprop();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s1;
          s2 = peg$c2(s3);
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$currPos;
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsefileprop();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s1;
            s2 = peg$c2(s3);
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      }

      return s0;
    }

    function peg$parsefileprop() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parsejsbrackets();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsecssprop();
        if (s1 === peg$FAILED) {
          s1 = peg$parsetextprop();
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c4(s1);
        }
        s0 = s1;
      }

      return s0;
    }

    function peg$parsecssprop() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 35) {
        s1 = peg$c5;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 3) === peg$c7) {
            s3 = peg$c7;
            peg$currPos += 3;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c8); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$currPos;
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 58) {
                s6 = peg$c9;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c10); }
              }
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                s6 = peg$parsecssbrackets();
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c11(s6);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsetextprop() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 35) {
        s1 = peg$c5;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 5) === peg$c12) {
            s3 = peg$c12;
            peg$currPos += 5;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c13); }
          }
          if (s3 === peg$FAILED) {
            if (input.substr(peg$currPos, 6) === peg$c14) {
              s3 = peg$c14;
              peg$currPos += 6;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c15); }
            }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 58) {
                s5 = peg$c9;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c10); }
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parselinew();
                if (s6 === peg$FAILED) {
                  s6 = null;
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$currPos;
                  s8 = peg$parseproptextbreak();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parselinew();
                    if (s9 === peg$FAILED) {
                      s9 = null;
                    }
                    if (s9 !== peg$FAILED) {
                      s8 = [s8, s9];
                      s7 = s8;
                    } else {
                      peg$currPos = s7;
                      s7 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                  if (s7 === peg$FAILED) {
                    s7 = null;
                  }
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parseproptext();
                    if (s8 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c16(s3, s8);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseproptext() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseproptextitem();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseproptextitem();
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c17(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseproptextbreak() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = [];
      if (peg$c18.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c19); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (peg$c18.test(input.charAt(peg$currPos))) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c19); }
          }
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        peg$silentFails++;
        s3 = peg$parseproptextlinenostart();
        peg$silentFails--;
        if (s3 === peg$FAILED) {
          s2 = void 0;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseproptextlinenostart() {
      var s0;

      if (peg$c20.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c21); }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c22) {
          s0 = peg$c22;
          peg$currPos += 2;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c23); }
        }
      }

      return s0;
    }

    function peg$parseproptextitem() {
      var s0;

      if (peg$c24.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c25); }
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseesc();
        if (s0 === peg$FAILED) {
          s0 = peg$parsemiddlejs();
          if (s0 === peg$FAILED) {
            s0 = peg$parsecontenttextwhite();
          }
        }
      }

      return s0;
    }

    function peg$parsenode() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parsenodehead();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s1;
          s2 = peg$c26(s2);
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsenodebody();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c27(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsenodedeclaration() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parsenodeheadnamed();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsenodebody();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c28(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsenodehead() {
      var s0, s1, s2, s3, s4, s5, s6;
